--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.2.2/react-router-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.6/react-redux.js"></script>
+
+    <script src="src/actions/users-actions.js" type="text/babel"></script>
+    <script src="src/reducers/users-reducer.js" type="text/babel"></script>
+    <script src="src/store.js" type="text/babel"></script>
+
     <script src="src/components/user-form.js" type="text/babel"></script>
     <script src="src/components/user-form-list.js" type="text/babel"></script>
     <script src="src/components/app.js" type="text/babel"></script>
+
+    <script src="src/containers/app-container.js" type="text/babel"></script>
+
     <script src="src/index.js" type="text/babel"></script>
   </head>
   <body>
